# ChangeLog for dev-perl/GnuPG-Interface
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/GnuPG-Interface/ChangeLog,v 1.52 2013/07/14 12:54:02 zlogene Exp $

  14 Jul 2013; Mikle Kolyada <zlogene@gentoo.org>
  GnuPG-Interface-0.460.0.ebuild:
  amd64/x86 stable wrt bug #449586

*GnuPG-Interface-0.460.0 (04 Nov 2012)

  04 Nov 2012; Torsten Veller <tove@gentoo.org>
  +GnuPG-Interface-0.460.0.ebuild, metadata.xml:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  03 Jun 2012; Torsten Veller <tove@gentoo.org> -GnuPG-Interface-0.42.ebuild,
  -GnuPG-Interface-0.440.0.ebuild:
  Cleanup

  28 May 2012; Raúl Porcel <armin76@gentoo.org> GnuPG-Interface-0.42.ebuild,
  GnuPG-Interface-0.440.0.ebuild, GnuPG-Interface-0.450.0.ebuild:
  Drop alpha/ia64/sparc keywords

  06 May 2012; Brent Baude <ranger@gentoo.org> GnuPG-Interface-0.450.0.ebuild:
  Marking GnuPG-Interface-0.450.0 ppc for bug 412993

  26 Apr 2012; Jeff Horelick <jdhore@gentoo.org>
  GnuPG-Interface-0.450.0.ebuild:
  marked x86 per bug 412993

  26 Apr 2012; Jeroen Roovers <jer@gentoo.org> GnuPG-Interface-0.450.0.ebuild:
  Stable for HPPA (bug #412993).

  22 Apr 2012; Agostino Sarubbo <ago@gentoo.org>
  GnuPG-Interface-0.450.0.ebuild:
  Stable for amd64, wrt bug #412993

*GnuPG-Interface-0.450.0 (31 Oct 2011)

  31 Oct 2011; Torsten Veller <tove@gentoo.org>
  +GnuPG-Interface-0.450.0.ebuild:
  Version bump

  30 Jul 2011; Torsten Veller <tove@gentoo.org>
  -GnuPG-Interface-0.430.0.ebuild:
  Cleanup

*GnuPG-Interface-0.440.0 (03 May 2011)

  03 May 2011; Torsten Veller <tove@gentoo.org>
  +GnuPG-Interface-0.440.0.ebuild:
  Version bump

*GnuPG-Interface-0.430.0 (09 Mar 2011)

  09 Mar 2011; Torsten Veller <tove@gentoo.org>
  +GnuPG-Interface-0.430.0.ebuild:
  Version bump

  28 Oct 2010; Fabian Groffen <grobian@gentoo.org>
  GnuPG-Interface-0.42.ebuild:
  Marked ~ppc-macos
