@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/GnuPG-Interface/GnuPG-Interface-0.460.0.ebuild,v 1.2 2013/07/14 12:54:02 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/GnuPG-Interface/GnuPG-Interface-0.460.0.ebuild,v 1.3 2013/07/14 22:38:56 jer Exp $
 
 EAPI=4
 
@@ -11,7 +11,7 @@ inherit perl-module
 DESCRIPTION="GnuPG::Interface is a Perl module interface to interacting with GnuPG."
 
 SLOT="0"
-KEYWORDS="amd64 ~hppa ~ppc x86 ~ppc-macos"
+KEYWORDS="amd64 hppa ~ppc x86 ~ppc-macos"
 IUSE=""
 
 RDEPEND=">=app-crypt/gnupg-1.2.1-r1
