@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/GnuPG-Interface
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/GnuPG-Interface/ChangeLog,v 1.52 2013/07/14 12:54:02 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/GnuPG-Interface/ChangeLog,v 1.53 2013/07/14 22:38:56 jer Exp $
+
+  14 Jul 2013; Jeroen Roovers <jer@gentoo.org> GnuPG-Interface-0.460.0.ebuild:
+  Stable for HPPA (bug #449586).
 
   14 Jul 2013; Mikle Kolyada <zlogene@gentoo.org>
   GnuPG-Interface-0.460.0.ebuild:
